assets/cluster-monitoring-operator/lightspeed-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: cluster-monitoring-operator-lightspeed
  namespace: openshift-monitoring
spec:
  ports:
  - name: lightspeed-webhook
    port: 9099
    targetPort: 9099
  selector:
    app.kubernetes.io/component: operator
    app.kubernetes.io/name: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  type: ClusterIP
